# AIBasics

./: README.md
Python/: Readme.md  main.py  pyproject.toml  test.py
Python/component/: printcomp.py
RAGBasic/: Main.py  docker-compose.yml  requirements.txt
RAGBasic/Pipeline/: LoadToKG.py  LoadToVectorDB.py
RAGBasic/Query/: QueryVectorDB.py
RAGBasic/Utility/: LLMUtility.py  LoadToVectorDB.py  QueryVectorDB.py
